<resources>
    <string name="app_name">w一刻钟</string>


    <string name="tishi">请输入内容,禁止输入色情、暴力等违反国家法律的内容,违者将以封号处理</string>
    <string name="jokes">悟空和唐僧一起上某卫视非诚勿扰,悟空上台,24盏灯全灭。理由:1.没房没车只有一根破棍. 2.保镖职业危险.3.动不动打妖精,对女生不温柔. 4.坐过牢,曾被压五指山下500年。唐僧上台，哗!灯全亮。 理由:1.公务员； 2.皇上兄弟，后台最硬 3.精通梵文等外语 4.长得帅 5.最关键一点：有宝马！</string>
    <!-- 登录页 -->
    <string name="prompt_email">Email</string>
    <string name="code">请输入短信验证码</string>
    <string name="password">请输入登录密码</string>
    <string name="phone_tel">请输入手机号码</string>
    <string name="other_login">使用常规登录方式</string>
    <string name="msg_code_login">短信验证码登录方式</string>
    <string name="other_login2">其他登录方式</string>
    <string name="qq_login_text">QQ登录</string>
    <string name="wx_login_text">微信登录</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="new_user">新用户</string>
    <string name="user_name_error">用户名不合法，3到20位，首字母必须是字母</string>
    <string name="user_password_error">密码不合法，3到20位数字</string>
    <string name="register">注册</string>
    <string name="user_password_confirm">确认密码</string>
    <string name="user_password_confirm_error">密码不一致</string>
    <string name="registering">注册中...</string>
    <string name="register_failed">注册失败</string>
    <string name="register_failed_user_exist">用户已存在</string>
    <string name="register_success">注册成功</string>
    <string name="logining">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="not_get_permission">未获取到权限</string>
    <string name="messages">消息</string>
    <string name="contacts">联系人</string>
    <string name="dynamic">动态</string>
    <string name="logout">退(%s)出</string>
    <string name="logouting">退出登录...</string>
    <string name="logout_success">退出登录成功</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="get_contacts_error">获取最新联系人失败</string>
    <string name="add_friend">添加好友</string>
    <string name="searching">拼命搜索中...</string>
    <string name="friend_not_found">未搜索到好友</string>
    <string name="add">添加</string>
    <string name="add_friend_reason">我是刘德华，请加我</string>
    <string name="add_friend_success">发送好友请求成功</string>
    <string name="add_friend_failed">发送好友请求失败</string>
    <string name="delete_friend">删除好友</string>
    <string name="delete_friend_message">您是否要和%s友尽？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="deleting_friend">正在删除好友...</string>
    <string name="delete_friend_failed">删除好友失败，请重试</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="send">发送</string>
    <string name="chat_with">与%s聊天中</string>
    <string name="sending">正在发送...</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="no_text_message">非文本消息</string>
    <string name="get_new_message">获取到新消息</string>
    <string name="load_data_success">加载数据成功</string>
    <string name="load_more_data_success">加载更多数据成功</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="load_conversations_success">加载会话成功</string>
    <string name="max_unread_count">99+</string>
    <string name="receive_new_message">收到新消息</string>
    <string name="user_login_another_device">用户在其他设备登录</string>
    <string name="added">已添加</string>

</resources>
