<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/toolbar_padding_top"
    android:background="@mipmap/login_bk"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x150"
        android:src="@mipmap/avatar6"
        android:layout_margin="@dimen/x20"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_newUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:textColor="@android:color/black"
        android:hint="@string/user_name"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_newPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:textColor="@android:color/black"
        android:hint="@string/user_password"
        android:inputType="numberPassword"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/et_newPassWord2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:textColor="@android:color/black"
        android:hint="@string/user_password_confirm"
        android:inputType="numberPassword"
        android:imeOptions="actionGo"/>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x20"
        android:background="@drawable/btn_login"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/register"/>

</LinearLayout>